--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -9,4 +9,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8080
-  type: LoadBalancer  # Use LoadBalancer for external access or NodePort for local clusters
+      nodePort: 30001
+  type: NodePort  # Use LoadBalancer for external access or NodePort for local clusters
