Update filebeat-configmap.yml changed output to logstash

--- a/k8s/ELK STACK/filebeat-configmap.yml
+++ b/k8s/ELK STACK/filebeat-configmap.yml
@@ -8,7 +8,6 @@ data:
       - type: log
         paths:
           - /usr/share/filebeat/logs/**/*.log
-    output.elasticsearch:
-      hosts: ["elasticsearch:9200"]
-    # output.logstash:
-    #   hosts: ["logstash:5400"]  
+
+    output.logstash:
+      hosts: ["logstash:5400"]  
